@@ -4,13 +4,16 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public enum FlowId {
 
-    UNKNOWN("unknown", HttpMethod.GET, List.of()),
-    WALLET_LIST("wallet_list", HttpMethod.GET, List.of("/api/wallets")),
-    CARD_LIST("card_list", HttpMethod.GET, List.of("/api/cards", "/api/cards/me")),
-    QR_REGISTER("qr_register", HttpMethod.POST, List.of("/api/wallets"));
+    UNKNOWN("unknown", HttpMethod.ANY, List.of()),
+
+    WALLET_LIST_GET("wallet_list_get", HttpMethod.GET, List.of("/api/wallets")),
+    CARD_LIST_GET("card_list_get", HttpMethod.GET, List.of("/api/cards", "/api/cards/me")),
+    CARD_GET("card_get", HttpMethod.GET, List.of("/api/cards/{card_id}", "/api/cards/me/latest", "/api/cards/uuid/{uuid}")),
+    CARD_REGISTER("card_register", HttpMethod.POST, List.of("/api/wallets"));
 
     private final String flowId;
     private final HttpMethod method;
@@ -35,11 +38,11 @@ public enum FlowId {
     }
 
     public String primaryTemplateOrUnknown() {
-        return (pathTemplates == null || pathTemplates.isEmpty()) ? "UNKNOWN" : pathTemplates.get(0);
+        return (pathTemplates == null || pathTemplates.isEmpty()) ? "UNKNOWN" : pathTemplates.getFirst();
     }
 
     private static final Map<String, FlowId> BY_FLOW_ID =
-            List.of(values()).stream()
+            Stream.of(values())
                     .collect(Collectors.toUnmodifiableMap(FlowId::flowId, Function.identity()));
 
     public static FlowId fromFlowId(String flowId) {
@@ -48,12 +51,12 @@ public enum FlowId {
     }
 
     public static List<FlowId> definedRoutes() {
-        return List.of(values()).stream()
+        return Stream.of(values())
                 .filter(f -> f.pathTemplates != null && !f.pathTemplates.isEmpty())
                 .toList();
     }
 
     public enum HttpMethod {
-        GET, POST, PUT, PATCH, DELETE
+        GET, POST, PUT, PATCH, DELETE, ANY
     }
 }
